--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class = "header">
+      <div class = "header__title">
+        <%= link_to "Jump League",root_path, class:"header__title--text"%>
+      </div>
+      <div class = "header__devise">
+        <% if user_signed_in? %>
+          <%= link_to "投票する",root_path,class:"header__devise--btn"%>
+          <%= link_to "logout",destroy_user_session_path,class:"header__divise--btn"%>
+        <% else %>
+          <%= link_to "login",new_user_session_path,class:"header__devise--btn"%>
+          <%= link_to "signin",new_user_registration_path,class:"header__devise--btn"%>
+        <% end %>
+      </div>
+    </header>
+    <div class = "container">
+      <%= yield %>
+    </div>
   </body>
 </html>
