--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <meta name="viewport" content="width=360,initial-scale=1">
     <title>JumpLeague</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
